[package]
name = "tiny-skia-stroke-to-path"
version = "0.6.3"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "The parts of tiny-skia required for path stroking"
documentation = "https://docs.rs/tiny-skia-stroke-to-path/"
readme = "README.md"
repository = "https://github.com/jrmuizel/tiny-skia-stroke-to-path"
license = "BSD-3-Clause"
keywords = ["2d", "rendering", "skia"]
categories = ["rendering"]

[dependencies]
arrayref = "0.3"
bytemuck = "1.4"
cfg-if = "1"
# do not update to 0.6, because it requires Rust >= 1.51
safe_arch = { version = "0.5.2", features = ["bytemuck"], optional = true }

[features]
default = ["std", "simd"]

# Enables the use of the standard library. Deactivate this and activate the libm
# feature to compile for targets that don't have std.
std = []

# Enables x86 SIMD instructions from SSE up to AVX2.
# Has no effect on non-x86 targets. Present mainly for testing.
simd = ["safe_arch"]
